Add TableLayoutFixed option to DataGridAppearance
* Introduced a new `TableLayoutFixed` flag in the `DataGridAppearance` enum
  to enable fixed column widths in `TnTDataGrid`.
* Updated `ElementClass` in `TnTDataGrid.razor.cs` to conditionally add the
  `tnt-table-layout-fixed` class when the `TableLayoutFixed` flag is set.
* Removed the `table-layout: fixed;` property from the base `.tnt-datagrid`
  class in `TnTDataGrid.razor.scss` and made it conditional on the
  `tnt-table-layout-fixed` class.
* Added a new CSS rule for `.tnt-table-layout-fixed` in `TnTDataGrid.razor.scss`
  to apply `table-layout: fixed;` when the class is present.
* Added two new test methods in `TnTDataGrid.Tests.cs`:
  - `DataGridAppearance_TableLayoutFixed_AddsFixedTableClass` to verify the
    `TableLayoutFixed` flag adds the correct CSS class.
  - `DataGridAppearance_MultipleFlags_ContainsTableLayoutFixedClass` to ensure
    multiple flags, including `TableLayoutFixed`, result in the correct CSS
    classes being applied.
* Updated `grid-template-columns` in `TnTColumnBase.razor.scss` to set the
  second column width to `140px` instead of `auto`.
* Fixed a potential encoding issue in `TnTDataGrid.razor.cs` by replacing the
  `using` directive for `Microsoft.AspNetCore.Components` with a BOM-marked
  version.

--- a/TnTComponents/Grid/TnTDataGrid.razor.scss
+++ b/TnTComponents/Grid/TnTDataGrid.razor.scss
@@ -9,7 +9,6 @@
     min-width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
-    table-layout: fixed;
     background-color: dg.$bg-color;
 
     @media #{measurements.$small-and-down} {
@@ -61,6 +60,10 @@
                 }
             }
         }
+    }
+
+    &.tnt-table-layout-fixed {
+        table-layout: fixed;
     }
 }
 
