--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
@@ -7,7 +7,7 @@
     padding: 0 8px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr 140px;
     align-items: center;
     user-select: none;
     height: inherit;
