Update grid layout for header content responsiveness
- Updated `grid-template-columns` in `.tnt-header-content`:
  - Changed from `1fr 140px` to `1fr auto` to allow dynamic sizing.
- Added a specific `grid-template-columns` for `.tnt-header-content`
  with the `tnt-column-header-sorted-on` modifier:
  - Defined as `1fr 160px` to set a fixed width of 160px for the second column when sorted.

--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
@@ -7,7 +7,7 @@
     padding: 0 8px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr 140px;
+    grid-template-columns: 1fr auto;
     align-items: center;
     user-select: none;
     height: inherit;
@@ -17,6 +17,7 @@
 
     &.tnt-column-header-sorted-on {
         color: dg.$tint-color;
+        grid-template-columns: 1fr 160px;
     }
 
     .tnt-column-header-sort-icon {
