Refactor SCSS height properties for flexible layouts
* Replaced `height` with `min-height` in multiple SCSS files:
  - Ensures elements have a minimum height for better adaptability.
* Changes in `TnTColumnBase.razor.scss`:
  - Updated `height: inherit;` to `min-height: inherit;`.
  - Adjusted `.tnt-column-header-sorted-on` grid columns from `1fr 160px` to `1fr 65px`.
  - Added `justify-self: end;` to `.tnt-column-header-sort-icon` for proper alignment.
* Changes in `TnTDataGridHeaderCell.razor.scss`:
  - Updated `height: inherit;` to `min-height: inherit;` for `.tnt-column-header-cell`.
* Changes in `TnTDataGridHeaderRow.razor.scss`:
  - Updated `height: 40px;` to `min-height: 40px;` for `.tnt-data-grid-header`.
  - Updated `height: inherit;` to `min-height: inherit;` for `.tnt-data-grid-header-row`.

--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
@@ -10,20 +10,21 @@
     grid-template-columns: 1fr auto;
     align-items: center;
     user-select: none;
-    height: inherit;
+    min-height: inherit;
     @include typescale.tnt-title-medium;
     @include interactable.tnt-interactable(dg.$tint-color, null);
     @include textAlignments.tnt-text-alignments;
 
     &.tnt-column-header-sorted-on {
         color: dg.$tint-color;
-        grid-template-columns: 1fr 160px;
+        grid-template-columns: 1fr 65px;
     }
 
     .tnt-column-header-sort-icon {
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-self: end;
 
         .tnt-column-header-sort-index {
             @include typescale.tnt-label-small;
