--- a/TnTComponents/Wizard/TnTWizard.razor.scss
+++ b/TnTComponents/Wizard/TnTWizard.razor.scss
@@ -1,9 +1,80 @@
 ﻿@use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
+@use '../Styles/_Variables/_measurements.scss' as measurements;
 
 $wizard-title-height: 24px;
 $wizard-subtitle-height: 20px;
 $wizard-title-gap-size: 4px;
+
+
+@mixin horizontal-layout {
+    grid-template-areas: "steps" "content" "buttons";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+
+    &:has(.tnt-wizard-title) {
+        grid-template-areas: "title" "steps" "content" "buttons";
+        grid-template-rows: auto auto 1fr auto;
+    }
+
+    .tnt-wizard-steps {
+        flex-direction: row;
+        grid-area: steps;
+        justify-content: space-between;
+        gap: 16px;
+        position: sticky;
+        top: 0;
+        background-color: inherit;
+        z-index: 10;
+
+        .tnt-wizard-step-indicator {
+            display: grid;
+            gap: 8px;
+            grid-template-areas: "step-title indicator";
+            grid-template-columns: auto 1fr;
+            grid-template-rows: auto;
+            align-items: center;
+
+            &:not(:last-child) {
+                width: 100%;
+            }
+
+            &:has(.tnt-wizard-step-subtitle) {
+                grid-template-areas: "step-title indicator" "step-subtitle indicator";
+                grid-template-rows: auto auto;
+            }
+
+            .tnt-wizard-step-title {
+                grid-area: step-title;
+                white-space: nowrap;
+            }
+
+            .tnt-wizard-step-subtitle {
+                grid-area: step-subtitle;
+                grid-row: 2;
+            }
+
+            &:has(.tnt-icon) {
+                .tnt-wizard-step-subtitle {
+                    //margin-left: calc($wizard-title-height + $wizard-title-height + 12px);
+                }
+            }
+
+            &:not(:last-child) {
+                &:after {
+                    top: unset;
+                    bottom: unset;
+                    right: unset;
+                    left: unset;
+                    width: 100%;
+                    height: 4px;
+                    grid-area: indicator;
+                    grid-row: 1 / 3;
+                }
+            }
+        }
+    }
+}
 
 .tnt-wizard {
     position: relative;
@@ -14,6 +85,7 @@ $wizard-title-gap-size: 4px;
     width: 100%;
     box-sizing: border-box;
     height: 100%;
+    background-color: inherit;
 
     &:has(.tnt-wizard-title) {
         grid-template-areas: "title title" "steps content" "steps buttons";
@@ -153,4 +225,13 @@ $wizard-title-gap-size: 4px;
         align-self: center;
         justify-self: end;
     }
+
+    @media only screen and (max-width: measurements.$medium-screen-up) {
+        @include horizontal-layout;
+    }
+
+    &.tnt-layout-horizontal {
+        @include horizontal-layout;
+    }
 }
+
