Refactor Sass for compatibility and build improvements
* Replaced `unquote` with `string.unquote` in `TnTColumn.razor.scss`
  and updated calculations to use `calc` for better CSS compatibility.
* Adjusted padding and margin calculations in `TnTColumn.razor.scss`
  to use `calc` for improved handling of mathematical expressions.
* Updated media query logic in `TnTLayout.razor.scss` to refine
  `:has` pseudo-class usage for better specificity and behavior.
* Updated `_measurements.scss` to use `calc` for `$element-top-margin`
  and `$element-bottom-margin` for consistency and compatibility.
* Replaced `DartSassBuilder` with `AspNetCore.SassCompiler` in
  `TnTComponents.csproj` to align with project requirements and
  improve build processes.
* Added `sasscompiler.json` to configure Sass compilation:
  - Defined arguments for expanded and compressed styles.
  - Enabled scoped CSS generation and specified scoped folders.
  - Added separate configurations for `Release` builds with
    compressed output and no source maps.

--- a/TnTComponents/Layout/TnTColumn.razor.scss
+++ b/TnTComponents/Layout/TnTColumn.razor.scss
@@ -1,10 +1,10 @@
 ﻿@use '../Styles/_Variables/_measurements.scss' as measurements;
-
+@use "sass:string";
 
 .tnt-col {
     float: left;
     box-sizing: border-box;
-    padding: 0 measurements.$gutter-width / 2;
+    padding: 0 calc(measurements.$gutter-width / 2);
     min-height: 1px;
 
     &[class*="push-"],
@@ -15,7 +15,7 @@
     $i: 1;
 
     @while $i <= measurements.$num-cols {
-        $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+        $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
 
         &.s#{$i} {
             width: $perc;
@@ -28,7 +28,7 @@
     $i: 1;
 
     @while $i <= measurements.$num-cols {
-        $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+        $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
         @include measurements.grid-classes("s", $i, $perc);
         $i: $i + 1;
     }
@@ -37,7 +37,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
 
             &.m#{$i} {
                 width: $perc;
@@ -50,7 +50,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
             @include measurements.grid-classes("m", $i, $perc);
             $i: $i + 1;
         }
@@ -60,7 +60,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
 
             &.l#{$i} {
                 width: $perc;
@@ -73,7 +73,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
             @include measurements.grid-classes("l", $i, $perc);
             $i: $i + 1;
         }
@@ -83,7 +83,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
 
             &.xl#{$i} {
                 width: $perc;
@@ -96,7 +96,7 @@
         $i: 1;
 
         @while $i <= measurements.$num-cols {
-            $perc: unquote((100 / (measurements.$num-cols / $i)) + "%");
+            $perc: string.unquote(calc(100 / calc(measurements.$num-cols / $i)) + "%");
             @include measurements.grid-classes("xl", $i, $perc);
             $i: $i + 1;
         }
@@ -104,8 +104,8 @@
 
     ::deep {
         .tnt-row {
-            margin-left: (-1 * measurements.$gutter-width / 2);
-            margin-right: (-1 * measurements.$gutter-width / 2);
+            margin-left: calc(-1 * measurements.$gutter-width / 2);
+            margin-right: calc(-1 * measurements.$gutter-width / 2);
         }
     }
 }
