--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor.scss
@@ -4,7 +4,7 @@
 @use '../TnTDataGridVariables.scss' as dg;
 
 .tnt-header-content {
-    padding: 0 8px;
+    padding: 0 4px;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr auto;
@@ -17,7 +17,7 @@
 
     &.tnt-column-header-sorted-on {
         color: dg.$tint-color;
-        grid-template-columns: 1fr 65px;
+        grid-template-columns: 1fr auto;
     }
 
     .tnt-column-header-sort-icon {
