Add MaxWidth property to TnTDataGrid columns
- Introduced `MaxWidth` property in `TnTPropertyColumn` to set a maximum width for columns in the data grid.
  - Applied to both body and header cells.
- Updated `DataGrid.razor` and `VirtualizedGrid.razor` to include `MaxWidth` attribute in `TnTPropertyColumn`.
- Added `DataGridAppearance.Compact` option to `TnTDataGrid` in `VirtualizedGrid.razor`.
- Implemented new unit tests in `TnTDataGridBodyCell.Tests.cs` and `TnTDataGridHeaderCell.Tests.cs` to verify `MaxWidth` rendering.
- Updated `TnTColumnBase` class to include `MaxWidth` as a nullable integer parameter.
- Modified `TnTDataGridBodyCell.razor` and `TnTDataGridHeaderCell.razor.cs` to apply `MaxWidth` style using `CssStyleBuilder`.
- Made minor formatting changes and adjusted additional attributes handling for proper style application.

--- a/LiveTest/LiveTest/Components/Pages/VirtualizedGrid.razor
+++ b/LiveTest/LiveTest/Components/Pages/VirtualizedGrid.razor
@@ -16,9 +16,9 @@
 
 
 <div style="height: 60vh; overflow-y:scroll">
-    <TnTDataGrid ItemsProvider="@_provider" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped">
+    <TnTDataGrid ItemsProvider="@_provider" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped | DataGridAppearance.Compact">
         <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
-        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" HeaderAlignment="TextAlign.Left" />
+        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" MaxWidth="50" HeaderAlignment="TextAlign.Left" />
         <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
         <TnTTemplateColumn>
             <TnTButton OnClickCallback="() => ItemClicked(context)" Appearance="ButtonAppearance.Text" TextColor="TnTColor.OnSurface" BackgroundColor="TnTColor.Surface" StopPropagation="true">
@@ -64,7 +64,7 @@
             await Task.Delay(_delay * 1000);
             var items = Items.Apply(request);
 
-            if(_empty) {
+            if (_empty) {
                 return new();
             }
 
